--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Ruff (lint)
         uses: astral-sh/ruff-action@v3
         with:
-          args: check
+          args: check --fix
 
       - name: Type check (mypy)
         run: |
