--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,10 @@
+# pyproject.toml
 [tool.ruff]
-line-length = 120
-target-version = "py312"
+line-length = 100
 
 [tool.ruff.lint]
-# On garde les familles utiles mais on ignore provisoirement quelques règles bruyantes
-select = ["E", "F", "B", "UP", "I"]
-ignore = [
-  "E701",  # statements sur une seule ligne
-  "E402",  # import non en tête (temporaire si nécessaire)
-  "E501",  # lignes > line-length (on a déjà 120 mais on tolère encore)
-  "F401",  # import non utilisé (à nettoyer plus tard)
-  "UP006", # Dict/List -> dict/list (on migrera progressivement)
-  "UP045", # Optional[X] -> X | None (on migrera progressivement)
-  "B904",  # raise from (on migrera progressivement)
-]
+select = ["E", "F", "I", "UP", "B"]
+ignore = []
+
+[tool.ruff.format]
+quote-style = "double"
