--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 # pyproject.toml
 [tool.ruff]
 line-length = 100
+target-version = "py312"  # <— important : autorise `X | None`
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "UP", "B"]
