--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,9 @@ uvicorn[standard]==0.30.6
 httpx==0.27.2
 python-dotenv==1.0.1
 pydantic==2.9.2
-openai>=1.100.0,<2
 dateparser==1.2.0
+
+# test
+pytest==8.3.2
+pytest-asyncio==0.23.8
+
