--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,42 +2,41 @@ name: CI
 
 on:
   push:
-    branches: ["**"]
+    branches: [ "main" ]
   pull_request:
-    branches: ["**"]
-  workflow_dispatch:
+    branches: [ "main" ]
 
 jobs:
-  ci:
+  lint:
     runs-on: ubuntu-latest
-    env:
-      PYTHONPATH: ${{ github.workspace }}
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-python@v5
         with:
           python-version: "3.12"
-          cache: "pip"
+      - name: Ruff Lint
+        uses: astral-sh/ruff-action@v3
+        with:
+          src: "./"
+          args: "check ."
 
+  test:
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
-
-      - name: Ruff (lint)
-        uses: astral-sh/ruff-action@v3
-        with:
-          args: check --fix
-
-      - name: Type check (mypy)
+      - name: Run pytest
+        env:
+          # On évite tout appel réseau dans les tests unitaires
+          AMADEUS_CLIENT_ID: "dummy"
+          AMADEUS_CLIENT_SECRET: "dummy"
+          AMADEUS_HOST: "https://example.invalid"
         run: |
-          if command -v mypy >/dev/null 2>&1; then mypy app || true; fi
-
-      - name: Security scan (bandit)
-        run: |
-          if command -v bandit >/dev/null 2>&1; then bandit -q -r app || true; fi
-
-      - name: Tests
-        run: pytest -q --maxfail=1 --disable-warnings
+          pytest -q
