--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,11 +32,25 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+  test:
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
       - name: Run pytest
         env:
-          # On évite tout appel réseau dans les tests unitaires
+          PYTHONPATH: .
           AMADEUS_CLIENT_ID: "dummy"
           AMADEUS_CLIENT_SECRET: "dummy"
           AMADEUS_HOST: "https://example.invalid"
         run: |
           pytest -q
+          # alternative equivalent:
+          # python -m pytest -q
