--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,23 +18,19 @@ jobs:
         uses: astral-sh/ruff-action@v3
         with:
           src: "./"
+          # On évite la règle I001 (imports triés) en sélectionnant seulement E,F,UP,B
           args: "check . --select E,F,UP,B"
 
   test:
     runs-on: ubuntu-latest
     needs: lint
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-  test:
-    runs-on: ubuntu-latest
-    needs: lint
+    env:
+      # Pour que `from app...` fonctionne en CI
+      PYTHONPATH: ${{ github.workspace }}
+      # Dummies pour les tests (pas d'appel réseau)
+      AMADEUS_CLIENT_ID: "dummy"
+      AMADEUS_CLIENT_SECRET: "dummy"
+      AMADEUS_HOST: "https://example.invalid"
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -45,12 +41,4 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Run pytest
-        env:
-          PYTHONPATH: .
-          AMADEUS_CLIENT_ID: "dummy"
-          AMADEUS_CLIENT_SECRET: "dummy"
-          AMADEUS_HOST: "https://example.invalid"
-        run: |
-          pytest -q
-          # alternative equivalent:
-          # python -m pytest -q
+        run: python -m pytest -q
